# dnn

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  accumulator.hpp  activation_function.cpp  activation_function.hpp  dynamic_neural_network.cpp  dynamic_neural_network.hpp  edge.cpp  edge.hpp  node.cpp  node.hpp
